[project]
name = "citygml-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "mapclassify>=2.10.0",
    "mapillary>=1.0.15",
    "matplotlib>=3.10.5",
    "shapely>=2.1.1",
]
